# omnichanel-analytics

./: .coverage  .env.example  .gitignore  Makefile  PRD.md  README.md  pyproject.toml
.atl/: skill-registry.md
dbt_project/: .gitignore  README.md  dbt_project.yml  profiles.yml
dbt_project/macros/: parse_bronze_filename.sql  salted_hash.sql
dbt_project/models/gold/: dim_menu_catalog.sql  dim_menu_catalog.yml  fact_financial_sales.sql  fact_financial_sales.yml
dbt_project/models/silver/: _sources.yml  silver_orders.sql  silver_orders.yml  silver_reports.sql  silver_reports.yml
dbt_project/seeds/: _seeds.yml  merchant_cogs_seed.csv
dbt_project/tests/: dim_menu_catalog_unique_combo.sql  silver_orders_line_item_qty_positive.sql  silver_orders_salted_hash_stable.sql  silver_orders_total_amount_non_negative.sql  silver_orders_total_amount_not_null_or_zero.sql  silver_orders_unique_order_marketplace.sql  silver_reports_no_warn_status.sql  silver_reports_unique_job_id.sql
openspec/: config.yaml
openspec/changes/backfill-loop-pr2b/: design.md
openspec/changes/cleanup-followups-pr3-1/: tasks.md
openspec/changes/cogs-editor-pr5a/: design.md  tasks.md
openspec/changes/dashboard-pr5b/: tasks.md
openspec/changes/gold-star-pr4b/: tasks.md
openspec/changes/oauth-errors-alerts-pr6a/: tasks.md
openspec/changes/onboarding-pr6/: exploration.md
openspec/changes/onboarding-wizard-pr6b/: spec.md
openspec/changes/pii-gold-pr4/: exploration.md
openspec/changes/pii-salted-pr4a/: design.md
openspec/changes/real-adapters-backfill/: proposal.md
openspec/changes/real-adapters-pr2a/: tasks.md  verify-report.md
openspec/changes/silver-orders-pr3a/: design.md  tasks.md
openspec/changes/silver-reports-pr3b/: design.md  proposal.md  spec.md  tasks.md  verify-report.md
openspec/changes/silver-transformation-pr3/: proposal.md
openspec/specs/backfill-loop-pr2b/: spec.md
openspec/specs/bronze-ingestion/: spec.md
openspec/specs/cleanup-followups-pr3-1/: spec.md
openspec/specs/local-test-mocking/: spec.md
openspec/specs/oauth-errors-alerts-pr6a/: spec.md
openspec/specs/onboarding-wizard-pr6b/: spec.md
openspec/specs/pii-salted-pr4a/: spec.md
openspec/specs/silver-orders-pr3a/: spec.md
openspec/specs/silver-reports-pr3b/: spec.md
openspec/specs/streamlit-serving/: spec.md
src/omc_analytics/: __init__.py
src/omc_analytics/common/: __init__.py  (+9 more)
tests/: __init__.py  conftest.py
tests/integration/: test_bronze_pipeline.py  test_dbt_gold_star_schema.py  test_dbt_pii_salted.py  test_dbt_silver_orders_e2e.py  test_dbt_silver_reports.py  test_pr2a_end_to_end.py
tests/unit/: test_conftest.py  test_fixtures.py  test_package_imports.py  test_pyproject.py
(+112 files in other folders)
