[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omc-analytics"
version = "0.1.0"
description = "Omnichannel Foodservice Analytics Engine — Bronze ingestion pipeline"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Omnichannel Analytics Team" },
]
dependencies = [
    "requests>=2.32.4,<3.0.0",
    "boto3>=1.34.0,<2.0.0",
    "cryptography>=42.0.0,<43.0.0",
    "click>=8.1.0,<9.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.scripts]
omc-ingest = "omc_analytics.ingestion.run:cli"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "responses>=0.25.0,<1.0.0",
    "moto>=5.0.0,<6.0.0",
    "freezegun>=1.5.0,<2.0.0",
    "ruff>=0.15.16,<1.0.0",
    "mypy>=1.10.0,<2.0.0",
    "black>=24.4.2,<25.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as slow integration tests (use `pytest -m integration` to run)",
]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-m", "not integration",
]

[tool.coverage.run]
source = ["src/omc_analytics"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "ISC",   # flake8-implicit-str-concat
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "moto.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "freezegun.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "urllib3.*"
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/omc_analytics"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'